# lyrics-app

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Lyrics & Chords Translation App - Implementation Plan.md  Lyrics & Chords Translation App – Testing and Maintenance.md  README.md  STYLE_MANIFESTO.md  checklist.md  docker-compose.yml  hello.py  pyproject.toml  requirements.txt
.cursor/rules/: claude-think.mdc  conventional-commits.mdc  non-intrusive.mdc  pre-commit-feedback-loop.mdc  zen-of-python.mdc
alembic/: __init__.py  env.py  script.py.mako
alembic/versions/: 06fb30c7a21a_enable_pg_trgm_and_add_trigram_indexes.py  20250101_000000_initial.py  20250209_000001_require_default_key_not_null.py  __init__.py
app/: __init__.py  admin.py  auth.py  db.py  main.py  middleware.py  models.py  parser.py  renderer.py  seed.py  settings.py  transposer.py
app/repositories/: __init__.py  admin_users.py  songs.py
app/templates/: 404.html  base.html  search.html  song.html
app/templates/sqladmin/: action_result.html  create.html  create_ext.html  details_ext.html  edit.html  edit_ext.html  list_ext.html
static/css/: base.css
static/js/: disintegrate.js
tests/: __init__.py  conftest.py  test_admin_auth.py  test_admin_validation.py  test_parser.py  test_parser_extra.py  test_render_full_example.py  test_renderer.py  test_renderer_extra.py  test_routes_and_repos.py  test_routes_render_example.py  test_transposer.py  test_transposer_extra.py
