[project]
name = "lyrics-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioitertools>=0.12.0",
    "alembic[tz]>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "pydantic>=2.11.7",
    "sqladmin[full]>=0.21.0",
    "sqlalchemy[asyncio]>=2.0.42",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.10.2",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
